Fix wrong scan progress indication while scanning big images.

BUG: 257982